--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="mongodb+srv://username:password@cluster.mongodb.net/peixe30?retryWrites=true&w=majority"
+DATABASE_URL="database-connection-string-here"
 
 # Server
 PORT=3333
