--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,19 +7,17 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
+    "ignoreDeprecations": "6.0",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "moduleResolution": "node",
     "isolatedModules": true,
     "declaration": false,
     "declarationMap": false,
     "sourceMap": false,
-    "removeComments": true,
-    "types": ["node"]
+    "removeComments": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "tests"],
-  "ts-node": {
-    "esm": false
-  }
+  "exclude": ["node_modules", "dist", "tests"]
 }
