--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "description": "",
   "dependencies": {
     "@fastify/cors": "^11.1.0",
@@ -32,7 +33,8 @@
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "prisma": "^6.16.3",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "tsup": "^8.0.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -47,7 +49,6 @@
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "tsx": "^4.20.6",
-    "tsup": "^8.0.1",
     "typescript": "^5.9.3"
   }
 }
